--- a/website/package.json
+++ b/website/package.json
@@ -11,6 +11,7 @@
     "gatsby": "^2.15.18",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-katex": "^2.0.2",
     "smooth-doc": "^5.0.4"
   }
 }
